[package]
name = "data_flow_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.4.0"
serde_json = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.28.2", features = ["full"] }
serde-this-or-that = "0.4.2"
serde_derive = "1.0.164"
erased-serde = "0.3.25"
flate2 = "1.0.26"
chrono = "0.4.26"
dotenv = "0.15.0"
