[package]
name = "data_flow_project_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-this-or-that = "0.4.2"
erased-serde = "0.3.25"
chrono = "0.4.26"
dotenv = "0.15.0"
url = "2.4.0"